# mvirt

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  Dockerfile  Makefile  README.md  flake.nix  index.html
mvirt/: Cargo.toml
mvirt-api/: Cargo.toml  build.rs
mvirt-api/proto/: node.proto
mvirt-api/src/: audit.rs  command.rs  lib.rs  main.rs  scheduler.rs  state.rs
mvirt-api/src/grpc/: manifest.rs  mod.rs  server.rs
mvirt-api/src/rest/: handlers.rs  mod.rs  routes.rs  ui_handlers.rs  ui_types.rs
mvirt-api/src/rest/handlers/: cluster.rs  mod.rs  networks.rs  nics.rs  vms.rs
mvirt-api/src/store/: error.rs  event.rs  raft_store.rs  traits.rs
mvirt-api/tests/: cluster_join.rs  raft_cluster.rs  rest_api.rs
mvirt-api/tests/common/: mod.rs
mvirt-cli/: Cargo.toml  README.md  build.rs
mvirt-cli/proto/: mvirt.proto  net.proto  zfs.proto
mvirt-cli/src/: main.rs  tui.rs
mvirt-cli/src/tui/: app.rs  mod.rs  types.rs  worker.rs
mvirt-cli/src/tui/modals/: log_detail.rs  mod.rs  network_create.rs  nic_create.rs  ssh_keys.rs  vm_create.rs  vm_detail.rs  volume_clone.rs  volume_create.rs  volume_detail.rs  volume_import.rs  volume_resize.rs  volume_snapshot.rs  volume_template.rs
mvirt-cli/src/tui/views/: logs.rs  mod.rs  network.rs  splash.rs  storage.rs  system.rs  vms.rs
mvirt-cli/src/tui/widgets/: console.rs  mod.rs  (+1 more)
mvirt-cp/: Cargo.toml
mvirt-cp/src/: audit.rs  command.rs  lib.rs  main.rs  state.rs
mvirt-cp/src/rest/: handlers.rs  routes.rs
mvirt-cp/src/store/: error.rs  event.rs  mod.rs  raft_store.rs  traits.rs
mvirt-cp/tests/: cluster_join.rs  raft_cluster.rs
mvirt-cp/tests/common/: mod.rs
mvirt-cplane/: ARCHITECTURE.md  Cargo.toml  build.rs
mvirt-cplane/proto/: node.proto
mvirt-cplane/src/: audit.rs  auth.rs  ca.rs  command.rs  lib.rs  main.rs  scheduler.rs  state.rs  tunnel.rs
mvirt-cplane/src/grpc/: mod.rs
mvirt-cplane/src/reconciler/: context.rs  mod.rs  network.rs  nic.rs  security_group.rs  template.rs  vm.rs  volume.rs
mvirt-cplane/src/rest/: routes.rs  ui_handlers.rs  ui_types.rs
mvirt-cplane/src/store/: error.rs  event.rs  raft_store.rs  traits.rs
mvirt-cplane/tests/: authz.rs  cluster.rs  cluster_join.rs  onboarding.rs  onboarding_e2e.rs  raft_cluster.rs  rest_api.rs  service_accounts.rs
mvirt-cplane/tests/common/: mod.rs
mvirt-daemon-protos/: Cargo.toml  build.rs
mvirt-daemon-protos/src/: lib.rs
mvirt-ebpf/: Cargo.toml  build.rs
mvirt-ebpf/migrations/: V1__initial_schema.sql  V2__security_groups.sql
mvirt-ebpf/programs/: Cargo.toml
mvirt-ebpf/programs/.cargo/: config.toml
mvirt-ebpf/programs/src/: tc_egress.rs  tc_ingress.rs
mvirt-ebpf/proto/: net.proto
mvirt-ebpf/src/: audit.rs  conntrack.rs  ebpf_loader.rs  lib.rs  main.rs  nat.rs  proto_handler.rs  tap.rs
mvirt-ebpf/src/grpc/: mod.rs  service.rs  storage.rs  validation.rs
mvirt-ebpf/src/test_util/: mod.rs  packets.rs  tap_device.rs
mvirt-ebpf/tests/: arp_test.rs  dhcp_test.rs  integration_test.rs  ipv6_test.rs  ping_test.rs  routing_test.rs  security_test.rs  service_test.rs
mvirt-log/: Cargo.toml  README.md  build.rs  mvirt-log.mk
mvirt-log/proto/: log.proto
mvirt-log/src/: audit.rs  batcher.rs  command.rs  distributed.rs  lib.rs  main.rs  storage.rs  tracing_setup.rs
mvirt-log/tests/: raft_cluster.rs
mvirt-net/: Cargo.toml  Makefile  README.md  architecture.md  build.rs  development.md
mvirt-net/migrations/: V1__initial_schema.sql
mvirt-net/proto/: net.proto
mvirt-net/src/: audit.rs  config.rs  grpc.rs  hugepage.rs  inter_reactor.rs  lib.rs  main.rs  messaging.rs  ping.rs  router.rs  routing.rs  store.rs  tun.rs  vhost_user.rs  virtqueue.rs
mvirt-net/src/dataplane/: arp.rs  backend.rs  dhcpv4.rs  dhcpv6.rs  icmp.rs  icmpv6.rs  manager.rs  mod.rs  ndp.rs  packet.rs  reactor.rs  router.rs  tun.rs  vhost.rs  worker.rs
mvirt-net/src/grpc/: manager.rs  mod.rs  service.rs  storage.rs  validation.rs
mvirt-net/src/reactor/: arp.rs  dhcp.rs  dhcpv6.rs  icmpv6.rs  mod.rs  registry.rs
mvirt-net/src/test_util/: frontend_device.rs  mod.rs  packets.rs  virtqueue.rs
mvirt-net/tests/: dhcp_arp_ping_test.rs  dhcpv6_test.rs  gso_integration.rs  ping_test.rs  vhost_integration.rs  vhost_test.rs  vm_to_vm_ping_test.rs  vm_to_vm_test.rs
mvirt-net/tests/harness/: backend.rs  client.rs  memory.rs  mod.rs  packets.rs  virtio.rs
mvirt-node/: Cargo.toml  build.rs
mvirt-node/src/: agent.rs  agent_impl.rs  main.rs  onboarding.rs  proto.rs  proxy.rs  tunnel.rs
mvirt-node/src/clients/: mod.rs  net.rs  vmm.rs  zfs.rs
mvirt-node/src/reconciler/: mod.rs  network.rs  nic.rs  route.rs  security_group.rs  template.rs  vm.rs  volume.rs
mvirt-one/: Cargo.toml  DESIGN.md  README.md  build.rs  kernel.config  mvirt-one.mk
mvirt-one/proto/: one.proto  uos.proto
mvirt-one/src/: error.rs  lib.rs  main.rs  proto.rs
mvirt-one/src/services/: mod.rs
mvirt-one/src/utils/: mod.rs  mount.rs  signals.rs
mvirt-one/tests/: integration_test.rs
mvirt-one/tests/common/: mod.rs
mvirt-shipper/: Cargo.toml
mvirt-shipper/src/: journal.rs  main.rs  shipper.rs
mvirt-ui/mock-server/: Cargo.toml
mvirt-ui/mock-server/src/: main.rs  state.rs
mvirt-uos/pideisn/: Cargo.toml
mvirt-uos/pideisn/src/: error.rs  log.rs  mount.rs  signals.rs
mvirt-vmm/: Cargo.toml  README.md  build.rs  mvirt-vmm.mk
mvirt-vmm/migrations/: 20240101000000_initial_schema.sql  20250127000000_remove_runtime_fk.sql  20250127000001_add_microvm_flag.sql
mvirt-vmm/proto/: mvirt.proto
mvirt-vmm/src/: grpc.rs  hypervisor.rs  lib.rs  main.rs  pod_service.rs  ready_listener.rs  store.rs  system_info.rs  vsock_client.rs
mvirt-vmm/tests/: e2e_integration.rs  vsock_integration.rs
mvirt-zfs/: Cargo.toml  README.md  build.rs  mvirt-zfs.mk
mvirt-zfs/migrations/: 20240101000000_initial_schema.sql  20240115000000_remove_volumes_name_unique.sql  20240120000000_simplify_snapshots.sql
mvirt-zfs/proto/: zfs.proto
mvirt-zfs/src/: audit.rs  grpc.rs  import.rs  lib.rs  main.rs  store.rs  zfs.rs
mvirt-zfs/tests/: lifecycle.rs
mvirt/proto/: mvirt.proto
mvirt/src/: main.rs  tui.rs
(+260 files in other folders)
