[workspace]
resolver = "2"
members = [
    "mvirt-vmm",
    "mvirt-cli",
    "mvirt-zfs",
    "mvirt-net",
    "mvirt-one",
    "mvirt-log",
]

# Size optimization for init process (MicroVM init)
[profile.release.package.mvirt-one]
opt-level = "z"
codegen-units = 1
strip = true

[profile.release]
lto = true
panic = "abort"
debug = true  # Keep debug symbols for profiling
