[package]
name = "mvirt-cp"
version = "0.1.0"
edition = "2024"

[lib]
name = "mvirt_cp"
path = "src/lib.rs"

[[bin]]
name = "mvirt-cp"
path = "src/main.rs"

[dependencies]
# Raft consensus via mraft
mraft = { path = "../../mraft" }

# REST API
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
mvirt-log = { path = "../mvirt-log" }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
lru = "0.16"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
