[package]
name = "mvirt-log"
version = "0.1.1"
edition = "2021"

[lib]
name = "mvirt_log"
path = "src/lib.rs"

[[bin]]
name = "mvirt-log"
path = "src/main.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14"
