[package]
name = "mvirt-log"
version = "0.1.1"
edition = "2021"

[lib]
name = "mvirt_log"
path = "src/lib.rs"

[[bin]]
name = "mvirt-log"
path = "src/main.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
redb = "2"
ulid = "1"
rand = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
mraft = { git = "https://github.com/maltej/mraft" }

[dev-dependencies]
tempfile = "3"
portpicker = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

[build-dependencies]
tonic-prost-build = "0.14"
