[package]
name = "mvirt-net"
version = "0.1.0"
edition = "2024"

[dependencies]
# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"

# Async runtime (control plane only)
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audit logging
mvirt-log = { path = "../mvirt-log" }

# Error handling
thiserror = "2"
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# vhost-user
vhost = { version = "0.15", features = ["vhost-user"] }
vhost-user-backend = "0.21"
vm-memory = { version = "=0.17.1", features = ["backend-mmap", "backend-atomic"] }
virtio-queue = "0.17"
vmm-sys-util = "0.15"

# Networking / Packet processing
smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-raw",
] }
dhcproto = "0.14"

# IP address handling
ipnet = "2"
prefix-trie = "0.8"

# Inter-thread communication (data plane)
crossbeam-channel = "0.5"

# Low-level (hugepages, eventfd)
nix = { version = "0.30", features = ["mman", "event"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
vhost = { version = "0.15", features = ["vhost-user-frontend"] }
nix = { version = "0.30", features = ["poll", "event"] }
