[package]
name = "mvirt-net"
version = "0.1.0"
edition = "2024"

[dependencies]
io-uring = "0.7"
nix = { version = "0.29", features = ["ioctl", "net", "event", "poll"] }
rtnetlink = "0.14"
netlink-packet-route = "0.19"
tokio = { version = "1", features = ["rt", "macros", "signal", "time", "sync"] }
futures = "0.3"
smoltcp = { version = "0.11", default-features = false, features = [
    "proto-ipv4", "proto-ipv6", "medium-ethernet", "socket-raw"
] }

# DHCP parsing
dhcproto = "0.12"
socket2 = { version = "0.5", features = ["all"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# LPM routing
prefix-trie = "0.8"
ipnet = "2.9"
uuid = { version = "1.0", features = ["v4"] }

# vhost-user support
vhost = { version = "0.15", features = ["vhost-user", "vhost-user-frontend"] }
vhost-user-backend = "0.21"
vm-memory = { version = "=0.17.1", features = ["backend-mmap", "backend-atomic"] }
virtio-queue = "0.17"
vmm-sys-util = "0.15"

# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Audit logging
mvirt-log = { path = "../mvirt-log" }

# Database + Migrations
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random (MAC generation)
rand = "0.8"

# Error handling
thiserror = "1.0"

# Stack-allocated vectors for hot path
smallvec = "1.15"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
crc32fast = "1.5"