[package]
name = "mvirt-node"
version = "0.1.0"
edition = "2021"
description = "mvirt Node Agent - hosts NodeAgent + daemon proxies on the reverse tunnel to mvirt-cplane"

[[bin]]
name = "mvirt-node"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# gRPC client
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tower = "0.5"
hyper = "1"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http2", "tokio"] }
http = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
async-trait = "0.1"

# Onboarding + mTLS (ADR-0006)
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring", "x509-parser"] }
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"

[build-dependencies]
tonic-prost-build = "0.14"
