[package]
name = "mvirt-vmm"
version = "0.1.0"
edition = "2024"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for cloud-hypervisor API
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"

# Unix socket support
hyperlocal = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audit logging
mvirt-log = { path = "../mvirt-log" }

# Error handling
thiserror = "2"
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Unix process handling
nix = { version = "0.29", features = ["signal", "process"] }

# System information
sysinfo = "0.32"

[build-dependencies]
tonic-build = "0.12"
