[package]
name = "mvirt-zfs"
version = "0.1.1"
edition = "2024"

[dependencies]
# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for URL imports)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"


# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging to mvirt-log
mvirt-log = { path = "../mvirt-log" }

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
nix = { version = "0.30", features = ["user"] }
