[package]
name = "pideisn"
version = "0.1.1"
edition = "2024"

[dependencies]
nix = { version = "0.29", features = ["mount", "net", "socket", "ioctl", "signal", "fs"] }
rtnetlink = "0.14"
netlink-packet-route = "0.21"
tokio = { version = "1", features = ["rt", "time", "sync", "net", "io-util", "process", "macros"] }
socket2 = "0.5"
dhcproto = "0.14"
libc = "0.2"
